--- a/styles/main.css
+++ b/styles/main.css
@@ -2,13 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 :root{
-    --vertical-space: 2rem;
+    --vertical-space: 1.5rem;
     --horizontal-space: 3rem;
 
-    --light-color: #BDEEFF;
-    --body-color: #156ABF;
-    --heading-color: #326CBF;
-    --contrast-color: #1FD4F0;
+    --light-color: #5CC8FF;
+    --body-color: #274BC2;
+    --heading-color: #122270;
+    --contrast-color: #FFAA0B;
 }
 
 body {
@@ -16,29 +16,20 @@ body {
     font-size: 18px;
     line-height: 1.5;
     font-family: 'Montserrat', sans-serif;
-    color: var(--body-color);
-    /* background-image: radial-gradient(circle at 56% 8%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 88% 36%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 25% 36%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 75% 81%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 77% 26%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 32% 90%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 92% 1%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 82% 1%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 81% 59%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 13% 46%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 94% 78%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 1% 76%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 27% 72%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 78% 29%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 91% 35%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 100% 34%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 6% 20%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 5%,transparent 5%, transparent 100%),linear-gradient(152deg, rgb(228,230,255),rgb(228,247,252)); */
-    /* background-image: radial-gradient(circle at 56% 8%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 88% 36%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 25% 36%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 75% 81%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 77% 26%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 32% 90%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 92% 1%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 82% 1%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 81% 59%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 13% 46%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 94% 78%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 1% 76%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 27% 72%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 78% 29%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 91% 35%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 100% 34%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 6% 20%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 5%,transparent 5%, transparent 100%),linear-gradient(152deg, rgb(239,240,250),rgb(189,238,255)); */
-    /* background-image: radial-gradient(circle at 56% 8%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 88% 36%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 25% 36%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 75% 81%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 77% 26%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 32% 90%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 92% 1%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 82% 1%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 81% 59%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 13% 46%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 94% 78%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 1% 76%, rgba(255,255,255, 0.1) 0%, rgba(255,255,255, 0.1) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 27% 72%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 78% 29%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 91% 35%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 100% 34%, rgba(255,255,255, 0.16) 0%, rgba(255,255,255, 0.16) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 6% 20%, rgba(255,255,255, 0.04) 0%, rgba(255,255,255, 0.04) 5%,transparent 5%, transparent 100%),linear-gradient(152deg, rgb(191,193,232),rgb(180,239,255)); */
-    background-image: radial-gradient(circle at 56% 8%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 88% 36%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 25% 36%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 75% 81%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 77% 26%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 32% 90%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 92% 1%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 82% 1%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 81% 59%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 13% 46%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 94% 78%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 1% 76%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 27% 72%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 78% 29%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 91% 35%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 100% 34%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 6% 20%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 5%,transparent 5%, transparent 100%),linear-gradient(154deg, rgb(195,197,255),rgb(90,221,254));
+    color: var(--light-color);
+    /* background-image: radial-gradient(circle at 56% 8%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 88% 36%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 25% 36%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 75% 81%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 77% 26%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 3%,transparent 3%, transparent 100%),radial-gradient(circle at 32% 90%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 92% 1%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 82% 1%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 81% 59%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 13% 46%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 94% 78%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 1% 76%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 7%,transparent 7%, transparent 100%),radial-gradient(circle at 27% 72%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 78% 29%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 91% 35%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 100% 34%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 5%,transparent 5%, transparent 100%),radial-gradient(circle at 6% 20%, rgba(255,255,255, 0.12) 0%, rgba(255,255,255, 0.12) 5%,transparent 5%, transparent 100%),linear-gradient(154deg, rgb(195,197,255),rgb(90,221,254)); */
+    background-image: repeating-linear-gradient(225deg, rgba(79,118,213, 0.42) 0px, rgba(79,118,213, 0.42) 2px,transparent 2px, transparent 4px),linear-gradient(135deg, rgb(25,49,131),rgb(25,49,131));
+    display: grid;
+    grid-template-areas: "head head"
+                        "nav nav"
+                        "main main"
+                        "foot foot";
+    grid-template-rows: auto auto 1fr auto;
+    
 }
 
-main {
-    background-color: var(--light-color);
-}
-
-a {
-    color: var(--body-color);
-    text-decoration-color: var(--contrast-color);
-}
-
-a:hover {
-    color: var(--contrast-color);
-}
-
-h1, h2, h3 {
-    font-family: 'Varela Round', sans-serif;
-    color: var(--heading-color);
+body > * {
+    padding-left: 1em;
 }
 
 body#about img {
@@ -54,52 +45,69 @@ p {
     line-height: 1.5em;
 }
 
-body {
-    display: grid;
-    grid-template-areas: "head head"
-                         "nav nav"
-                         "main main"
-                         "foot foot";
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: auto auto 1fr auto;
+main {
+    background-color: var(--body-color);
 }
 
-@media screen and (min-width: 25em) {
-    body {
-        grid-template-areas: "head head"
-                            "nav main"
-                            "foot foot";
-        grid-template-rows: auto 1fr auto;
-    }
+a {
+    color: var(--light-color);
+    text-decoration-color: var(--contrast-color);
+    font-size: 1.5rem;
 }
 
-body > * {
-    padding-left: var(--horizontal-space);
+a:hover {
+    color: var(--contrast-color);
+}
+
+#avatar {
+    float: right;
+    margin: 5%;
+}
+
+
+#tabName {
+    font-size: 2rem;
+}
+
+h1, h2, h3 {
+    font-family: 'Varela Round', sans-serif;
+    color: var(--light-color);
 }
 
 body > header {
     grid-area: head;
-    /* background-color: red; */
+    padding: 2vw;
+    text-align: center;
+    background-color: var(--heading-color);
 }
 
 body > nav {
     grid-area: nav;
-    /* background-color: yellow; */
+    display: inline;
+    padding: 0;
+    margin: auto auto;
 }
 
 body > nav ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
+    height: 100%;
 }
 
 body > nav ul li {
-    /* display: inline; */
-    /* padding-right: 1rem; */
+    display: table-cell;
+    padding: 0 2vw;
+    text-align: center;
+    margin: 30% 0;
+    font-size: 1.5rem;
 }
 
 body > main {
     grid-area: main;
     /* background-color: greenyellow; */
+    padding-bottom: 0.7em;
+    margin-bottom: 0.7em;
 }
 
 body > footer {
@@ -114,6 +122,28 @@ header, footer {
 
 header h1, footer h1 {
     margin: 0;
+}
+
+@media screen and (min-width: 25em) {
+    body > nav ul li {
+        padding: 0 5%;
+    }
+
+    body > header {
+        padding: 1em;
+    }
+
+    body {
+        grid-template-areas: "head nav"
+                            "main main"
+                            "foot foot";
+        grid-template-columns: 2fr 3fr;
+        grid-template-rows: auto auto auto;
+    }
+
+    body > * {
+        padding-left: var(--horizontal-space);
+    }
 }
 
 body#portfolio ul#portfolioItems {
