--- a/styles/main.css
+++ b/styles/main.css
@@ -53,6 +53,7 @@ a {
     color: var(--light-color);
     text-decoration-color: var(--contrast-color);
     font-size: 1.5rem;
+    margin: 1vw;
 }
 
 a:hover {
